fixed issue with spacing in navbar

--- a/client/src/styles/NavBar.module.css
+++ b/client/src/styles/NavBar.module.css
@@ -6,3 +6,6 @@
 .userdetailsmodalbutton{
   display: none;
 }
+#img {
+  margin-right: 1rem;
+}
